--- a/firebase.json
+++ b/firebase.json
@@ -22,6 +22,17 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "headers": [
+      {
+        "source": "**/*.html",
+        "headers": [
+          {
+            "key": "Content-Security-Policy",
+            "value": "script-src 'self' 'unsafe-inline' 'wasm-unsafe-eval'"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
         "source": "**",
