--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "mkdir -p public && cp index.html public/index.html"
+    "build": "mkdir -p public && cp index.html public/index.html && cp script.js public/script.js"
   },
   "keywords": [],
   "author": "",
